--- a/web/src/app/employees/employee-profile/employee-edit/employee-edit.component.html
+++ b/web/src/app/employees/employee-profile/employee-edit/employee-edit.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-4 shadow border-0 rounded-lg">
+<div class="card mb-4 shadow-sm border-0 rounded-lg">
   <div class="card-body mb-0">
     <p class="h5">Account info</p>
     <hr>
