--- a/web/src/app/employees/employee-profile/employee-profile.component.html
+++ b/web/src/app/employees/employee-profile/employee-profile.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="col-md-8">
         <div class="alert alert-success border-0 rounded-sm" *ngIf="isDone">Waiting for confirmation</div>
-        <div class="card shadow border-0 rounded-lg" *ngIf="employee.task !== null; else notShow">
+        <div class="card shadow-sm mb-4 border-0 rounded-lg" *ngIf="employee.task !== null; else notShow">
           <div class="card-body mb-0">
             <div class="float-right">
               <button class="btn rounded-sm mb-0 mt-2 float-right"
