--- a/web/src/app/tasks/task-list/task-list.component.html
+++ b/web/src/app/tasks/task-list/task-list.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-4 shadow border-0 rounded-lg" *ngFor="let task of taskList">
+<div class="card mb-4 shadow-sm border-0 rounded-lg" *ngFor="let task of taskList">
   <div class="card-body mb-0">
     <!--change text color based on status-->
     <div class="close" [ngClass]="setTaskColor(task)">
