--- a/web/src/app/tasks/tasks.component.html
+++ b/web/src/app/tasks/tasks.component.html
@@ -1,6 +1,14 @@
+
+
 <div class="row justify-content-center">
   <div class="col-xl-6 col-lg-7 col-md-7">
     <app-task-form></app-task-form>
+  </div>
+</div>
+
+<div class="row justify-content-center">
+  <div class="col-xl-6 col-lg-7 col-md-7 mt-2 mb-4">
+    <app-task-status-color></app-task-status-color>
   </div>
 </div>
 <div class="row justify-content-center">
