--- a/web/src/app/employees/employee-list/employee-list.component.html
+++ b/web/src/app/employees/employee-list/employee-list.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-7">
     <div class="row mt-4">
       <div class="col-12">
-        <div class="table-responsive shadow rounded-lg">
+        <div class="table-responsive shadow-sm rounded-lg">
           <table class="table table-borderless table-hover">
             <thead>
             <tr>
