--- a/web/src/app/tasks/task-status-color/task-status-color.component.html
+++ b/web/src/app/tasks/task-status-color/task-status-color.component.html
@@ -4,15 +4,15 @@
       <div class="card-body p-0">
         <div class="row text-center">
           <div class="col-4 ">
-            <p class="mb-0 ">assign</p>
+            <p class="mb-0 ">Assign</p>
             <i class="material-icons text-danger">lens</i>
           </div>
           <div class="col-4">
-            <p class="mb-0 text-center">doing</p>
+            <p class="mb-0 text-center">Doing</p>
             <i class="material-icons text-warning">lens</i>
           </div>
           <div class="col-4">
-            <p class="mb-0 text-center">done</p>
+            <p class="mb-0 text-center">Done</p>
             <i class="material-icons text-success">lens</i>
           </div>
         </div>
