--- a/web/src/app/employees/employee-profile/employee-edit/employee-edit-modal/employee-edit-modal.component.html
+++ b/web/src/app/employees/employee-profile/employee-edit/employee-edit-modal/employee-edit-modal.component.html
@@ -11,7 +11,7 @@
         <div class="col-12">
           <div class="form-group">
             <label for="name">Full name</label>
-            <input type="text" id="name" formControlName="name" class="form-control rounded-sm bg-light">
+            <input type="text" id="name" formControlName="name" class="form-control rounded-sm shadow-sm">
           </div>
         </div>
       </div>
@@ -19,7 +19,7 @@
         <div class="col-12">
           <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" id="email" formControlName="email" class="form-control rounded-sm bg-light">
+            <input type="email" id="email" formControlName="email" class="form-control rounded-sm shadow-sm">
           </div>
         </div>
       </div>
