--- a/web/src/app/employees/employee-profile/employee-edit/employee-edit.component.html
+++ b/web/src/app/employees/employee-profile/employee-edit/employee-edit.component.html
@@ -1,11 +1,7 @@
 <div class="card mb-4 shadow-sm border-0 rounded-lg">
   <div class="card-body mb-0">
-    <p class="h5">Account info</p>
-    <hr>
-    <p class="h6">Full name:</p>
-    <p>{{employee.name}}</p>
-    <p class="h6">Email:</p>
+    <p class="h5">{{employee.name}}</p>
     <p>{{employee.email}}</p>
-    <button class="btn btn-dark rounded-sm" (click)="onEdit()">Edit account info</button>
+    <button class="btn btn-secondary" (click)="onEdit()">Edit account info</button>
   </div>
 </div>
