--- a/web/src/app/login/login.component.html
+++ b/web/src/app/login/login.component.html
@@ -11,7 +11,7 @@
                   <div class="alert alert-danger mb-3 border-0" *ngIf="errorMessage">{{this.errorMessage}}</div>
                   <div class="form-group">
                     <label for="username">Username</label>
-                    <input type="text" id="username" formControlName="username" class="form-control bg-light rounded-sm">
+                    <input type="text" id="username" formControlName="username" class="form-control shadow-sm rounded-sm">
                     <span class="text-danger" *ngIf="isEmptyField('username')">Invalid username</span>
                   </div>
                 </div>
@@ -20,7 +20,7 @@
                 <div class="col-12">
                   <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" id="password" formControlName="password" autocomplete="off" class="form-control bg-light rounded-sm">
+                    <input type="password" id="password" formControlName="password" autocomplete="off" class="form-control shadow-sm rounded-sm">
                     <span class="text-danger" *ngIf="isEmptyField('password')">Invalid password</span>
                   </div>
                 </div>
