--- a/web/src/app/register/register.component.html
+++ b/web/src/app/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-  <div class="col-md-6">
+  <div class="col-xl-6 col-lg-7 col-md-7">
     <div class="row">
       <div class="col-12">
         <div class="card shadow rounded-lg border-0">
@@ -10,7 +10,7 @@
                 <div class="col-12">
                   <div class="form-group">
                     <label for="username">Username</label>
-                    <input type="text" id="username" formControlName="username" class="form-control bg-light rounded-sm">
+                    <input type="text" id="username" formControlName="username" class="form-control shadow-sm rounded-sm">
                     <span class="text-danger" *ngIf="isEmptyField('username')">Invalid username</span>
                   </div>
                 </div>
@@ -19,7 +19,7 @@
                 <div class="col-12">
                   <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" id="password" formControlName="password" autocomplete="off" class="form-control bg-light rounded-sm">
+                    <input type="password" id="password" formControlName="password" autocomplete="off" class="form-control shadow-sm rounded-sm">
                     <span class="text-danger" *ngIf="isEmptyField('password')">Invalid password</span>
                   </div>
                 </div>
@@ -28,7 +28,7 @@
                 <div class="col-12">
                   <div class="form-group">
                     <label for="name">Full name</label>
-                    <input type="text" id="name" formControlName="name" class="form-control bg-light rounded-sm">
+                    <input type="text" id="name" formControlName="name" class="form-control shadow-sm rounded-sm">
                     <span class="text-danger" *ngIf="isEmptyField('name')">Invalid name</span>
                   </div>
                 </div>
@@ -37,7 +37,7 @@
                 <div class="col-12">
                   <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" id="email" formControlName="email" class="form-control bg-light rounded-sm">
+                    <input type="email" id="email" formControlName="email" class="form-control shadow-sm rounded-sm">
                     <span class="text-danger" *ngIf="isEmptyField('email')">Invalid email</span>
                   </div>
                 </div>
