--- a/web/src/app/tasks/task-form/task-form.component.html
+++ b/web/src/app/tasks/task-form/task-form.component.html
@@ -1,12 +1,12 @@
 <div class="row mb-4">
   <div class="col-12">
     <div class="card border-0 rounded-lg shadow-sm">
-      <div class="card-header bg-dark text-white border-0 rounded-0">Task Form</div>
+      <div class="card-header bg-dark text-white border-0 rounded-0">Task form</div>
       <div class="card-body">
         <form [formGroup]="taskForm" (ngSubmit)="onSubmit()">
           <div class="row">
             <div class="col-12">
-              <div class="alert alert-danger border-0 rounded-lg mb-3" *ngIf="errorMessage">{{this.errorMessage}}</div>
+              <div class="alert alert-danger border-0 mb-3" *ngIf="errorMessage">{{this.errorMessage}}</div>
               <div class="form-group">
                 <label for="task-name">Name</label>
                 <input type="text" id="task-name" class="form-control shadow-sm rounded-sm" formControlName="name">
@@ -42,7 +42,7 @@
           </div>
           <div class="row">
             <div class="col-12">
-              <button type="submit" class="btn btn-primary rounded-sm mt-1">{{editMode ? 'Update task' : 'Add task'}}</button>
+              <button type="submit" class="btn btn-primary rounded-sm mt-1">{{editMode ? 'Update task' : 'Create task'}}</button>
             </div>
           </div>
         </form>
