update profile ui

--- a/web/src/app/employees/employee-profile/employee-edit/employee-edit-modal/employee-edit-modal.component.html
+++ b/web/src/app/employees/employee-profile/employee-edit/employee-edit-modal/employee-edit-modal.component.html
@@ -1,8 +1,8 @@
 <div class="modal-content rounded-lg">
-  <div class="modal-header rounded-0 border-0 bg-dark text-white py-0 px-3">
-    <p style="padding-top: 0.8rem;">Edit account</p>
-    <button type="button" style="outline: none;" class="close py-0 mb-0 mt-2" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
-      <span aria-hidden="true" class="h4 text-white">&times;</span>
+  <div class="modal-header rounded-0 border-0 bg-dark text-white p-0">
+    <p style="margin-top: 0.8rem;" class="px-3">Edit account</p>
+    <button type="button" style="outline:none;margin-top:0.5rem;" class="btn float-right bg-transparent" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
+      <i class="material-icons text-white" style="font-size: 20px;">clear</i>
     </button>
   </div>
   <div class="modal-body">
