--- a/web/src/app/employees/employee-profile/employee-profile.component.html
+++ b/web/src/app/employees/employee-profile/employee-profile.component.html
@@ -9,20 +9,20 @@
         <div class="card shadow-sm mb-4 border-0 rounded-lg" *ngIf="employee.task !== null; else notShow">
           <div [ngClass]="setTaskColor()" style="padding: 2px;"></div>
           <div class="card-body mb-0">
-            <div class="float-right">
-              <button class="btn rounded-sm mb-0 mt-1 float-right"
-                      [ngClass]="setBtnColor()" (click)="onAccept()" *ngIf="!isDoing && !isDone">Accept task</button>
-              <button class="btn rounded-sm mb-0 mt-1 float-right"
-                      [ngClass]="setBtnColor()" (click)="onDone()" *ngIf="isDoing">Done</button>
+            <div class="close">
+              <button class="btn rounded-sm mb-0 mt-1"
+                      [ngClass]="setBtnColor()" (click)="onAccept()" *ngIf="!isDoing && !isDone">Accept</button>
+              <button class="btn rounded-sm mb-0 mt-1"
+                      [ngClass]="setBtnColor()" (click)="onDone()" *ngIf="isDoing">Finish</button>
             </div>
-            <div class="float-left">
+            <div>
               <p class="card-title h5 mb-0" style="text-transform: uppercase;">{{employee.task?.name}}</p>
               <p class="mb-0">{{employee.task?.description}}</p>
             </div>
           </div>
         </div>
         <ng-template #notShow>
-          <div class="alert alert-warning border-0 rounded-sm">
+          <div class="alert alert-warning border-0">
             There's no task to work on.
           </div>
         </ng-template>
