--- a/web/src/app/tasks/task-form/task-form.component.html
+++ b/web/src/app/tasks/task-form/task-form.component.html
@@ -6,7 +6,7 @@
         <form [formGroup]="taskForm" (ngSubmit)="onSubmit()">
           <div class="row">
             <div class="col-12">
-              <div class="alert alert-danger border-0 mb-3" *ngIf="errorMessage">{{this.errorMessage}}</div>
+              <div class="alert alert-danger border-0 mb-3 rounded-sm" *ngIf="errorMessage">{{this.errorMessage}}</div>
               <div class="form-group">
                 <label for="task-name">Name</label>
                 <input type="text" id="task-name" class="form-control shadow-sm rounded-sm" formControlName="name">
