update admin and user guard

--- a/web/src/app/login/login.component.html
+++ b/web/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="col-xl-6 col-lg-7 col-md-7">
     <div class="row">
       <div class="col-12">
-        <div class="card shadow border-0 rounded-lg">
+        <div class="card shadow-sm border-0 rounded-lg">
           <div class="card-header bg-dark border-0 rounded-0 text-white">Login form</div>
           <div class="card-body">
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
