--- a/web/src/app/employees/employee-profile/employee-edit/employee-edit.component.html
+++ b/web/src/app/employees/employee-profile/employee-edit/employee-edit.component.html
@@ -2,6 +2,6 @@
   <div class="card-body mb-0">
     <p class="h5">{{employee.name}}</p>
     <p>{{employee.email}}</p>
-    <button class="btn btn-outline-secondary rounded-sm" (click)="onEdit()">Edit account</button>
+    <button class="btn btn-outline-dark rounded-sm" (click)="onEdit()">Edit account</button>
   </div>
 </div>
