--- a/web/src/app/register/register.component.html
+++ b/web/src/app/register/register.component.html
@@ -2,7 +2,7 @@
   <div class="col-xl-6 col-lg-7 col-md-7">
     <div class="row">
       <div class="col-12">
-        <div class="card shadow rounded-lg border-0">
+        <div class="card shadow-sm rounded-lg border-0">
           <div class="card-header bg-dark border-0 text-white rounded-0">Register form</div>
           <div class="card-body">
             <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
