--- a/web/src/app/login/login.component.html
+++ b/web/src/app/login/login.component.html
@@ -8,7 +8,7 @@
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
               <div class="row">
                 <div class="col-12">
-                  <div class="alert alert-danger mb-3 border-0" *ngIf="errorMessage">{{this.errorMessage}}</div>
+                  <div class="alert alert-danger mb-3 border-0 rounded-sm" *ngIf="errorMessage">{{this.errorMessage}}</div>
                   <div class="form-group">
                     <label for="username">Username</label>
                     <input type="text" id="username" formControlName="username" class="form-control shadow-sm rounded-sm">
