--- a/web/src/app/register/register.component.html
+++ b/web/src/app/register/register.component.html
@@ -8,6 +8,7 @@
             <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
               <div class="row">
                 <div class="col-12">
+                  <div class="alert alert-danger border-0 mb-3 rounded-sm" *ngIf="errorMessage">{{this.errorMessage}}</div>
                   <div class="form-group">
                     <label for="username">Username</label>
                     <input type="text" id="username" formControlName="username" class="form-control shadow-sm rounded-sm">
