--- a/web/src/app/employees/employee-profile/employee-profile.component.html
+++ b/web/src/app/employees/employee-profile/employee-profile.component.html
@@ -18,9 +18,7 @@
           </div>
         </div>
         <ng-template #notShow>
-          <div class="alert alert-warning border-0">
-            There's no task to work on.
-          </div>
+          <div class="alert alert-warning border-0">There's no task to work on.</div>
         </ng-template>
       </div>
     </div>
