--- a/web/src/app/employees/employee-profile/employee-edit/employee-edit-modal/employee-edit-modal.component.html
+++ b/web/src/app/employees/employee-profile/employee-edit/employee-edit-modal/employee-edit-modal.component.html
@@ -25,7 +25,7 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <button class="btn btn-primary rounded-sm mt-1 mb-1">Update</button>
+          <button class="btn btn-primary rounded-sm mt-1 mb-1 w-100">Update</button>
         </div>
       </div>
     </form>
