--- a/web/src/app/employees/employee-profile/employee-edit/employee-edit.component.html
+++ b/web/src/app/employees/employee-profile/employee-edit/employee-edit.component.html
@@ -1,7 +1,9 @@
 <div class="card mb-4 shadow-sm border-0 rounded-lg">
   <div class="card-body mb-0">
-    <p class="h5">{{employee.name}}</p>
+    <p class="text-weight-500 mb-0">Full name:</p>
+    <p>{{employee.name}}</p>
+    <p class="text-weight-500 mb-0">Email:</p>
     <p>{{employee.email}}</p>
-    <button class="btn btn-secondary rounded-sm" (click)="onEdit()">Edit account</button>
+    <button class="btn btn-secondary rounded-sm w-100" (click)="onEdit()">Edit account</button>
   </div>
 </div>
