--- a/web/src/app/employees/employee-profile/employee-profile.component.html
+++ b/web/src/app/employees/employee-profile/employee-profile.component.html
@@ -10,10 +10,10 @@
           <div [ngClass]="setTaskColor()" style="padding: 2px;"></div>
           <div class="card-body mb-0">
             <p class="card-title h5 mb-1" style="text-transform: uppercase;">{{employee.task?.name}}</p>
-            <p class="mb-0">{{employee.task?.description}}</p>
-            <button class="btn rounded-sm mt-3"
+            <p class="mb-0" style="white-space: pre-wrap">{{employee.task?.description}}</p>
+            <button class="btn rounded-sm mt-3 w-100"
                     [ngClass]="setBtnColor()" (click)="onAccept()" *ngIf="!isDoing && !isDone">Accept task</button>
-            <button class="btn rounded-sm mt-3"
+            <button class="btn rounded-sm mt-3 w-100"
                     [ngClass]="setBtnColor()" (click)="onDone()" *ngIf="isDoing">Finish task</button>
           </div>
         </div>
