--- a/web/src/app/tasks/task-list/task-list.component.html
+++ b/web/src/app/tasks/task-list/task-list.component.html
@@ -8,10 +8,12 @@
     </div>
     <div>
       <p class="h5 mb-1" style="text-transform: uppercase;">{{task.name}}</p>
-      <p class="mb-0">{{task.description}}</p>
+      <p class="mt-2 mb-0 text-weight-500">Description:</p>
+      <p class="mb-0" style="white-space: pre-wrap">{{task.description}}</p>
+      <p class="mt-2 mb-0 text-weight-500">Assigned to:</p>
       <p class="mb-0">{{task.employee.name}}</p>
-      <small class="text-muted">Due at {{task.deadline}}</small>
-      <button class="btn btn-success rounded-sm mt-3" type="button" (click)="onArchiveTask(task)" *ngIf="task.status === 'DONE'">Archive task</button>
+      <small class="text-muted">Due at {{formatDate(task.deadline)}}</small>
+      <button class="d-block btn btn-success rounded-sm w-100 mt-3" type="button" (click)="onArchiveTask(task)" *ngIf="task.status === 'DONE'">Archive task</button>
     </div>
   </div>
 </div>
