--- a/web/src/app/tasks/tasks.component.html
+++ b/web/src/app/tasks/tasks.component.html
@@ -1,18 +1,32 @@
+<!--<div class="row justify-content-center">-->
+<!--  <div class="col-xl-6 col-lg-7 col-md-7">-->
+<!--    <app-task-form></app-task-form>-->
+<!--  </div>-->
+<!--</div>-->
 
+<!--<div class="row justify-content-center">-->
+<!--  <div class="col-xl-6 col-lg-7 col-md-7 mt-2 mb-4">-->
+<!--    <app-task-status-color></app-task-status-color>-->
+<!--  </div>-->
+<!--</div>-->
+<!--<div class="row justify-content-center">-->
+<!--  <div class="col-xl-6 col-lg-7 col-md-7">-->
+<!--    <app-task-list></app-task-list>-->
+<!--  </div>-->
+<!--</div>-->
 
-<div class="row justify-content-center">
-  <div class="col-xl-6 col-lg-7 col-md-7">
+<div class="row">
+  <div class="col-lg-4">
     <app-task-form></app-task-form>
   </div>
-</div>
-
-<div class="row justify-content-center">
-  <div class="col-xl-6 col-lg-7 col-md-7 mt-2 mb-4">
-    <app-task-status-color></app-task-status-color>
-  </div>
-</div>
-<div class="row justify-content-center">
-  <div class="col-xl-6 col-lg-7 col-md-7">
-    <app-task-list></app-task-list>
+  <div class="col-lg-8">
+    <div class="row justify-content-center">
+      <div class="col-12">
+        <div class="mb-4">
+          <app-task-status-color></app-task-status-color>
+        </div>
+        <app-task-list></app-task-list>
+      </div>
+    </div>
   </div>
 </div>
